--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,14 @@
+body {
+  margin: 0;
+  padding: 0;
+
+  font-family: 'Roboto', Arial, sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  text-align: left;
+  color: rgba(255, 255, 255, 255);
+}
+
 .visually-hidden {
   position: absolute;
   width: 1px;
