--- a/styles/main.css
+++ b/styles/main.css
@@ -6,7 +6,9 @@ body {
   font-size: 16px;
   font-weight: 500;
   text-align: left;
-  color: rgba(255, 255, 255, 255);
+  color: #ffffff;
+
+  background-color: #849d8f;
 }
 
 .visually-hidden {
